--- a/style.css
+++ b/style.css
@@ -7,9 +7,19 @@
   padding: 0;
 }
 
-body {
-  font-family: "Poppins", sans-serif;
+:root {
+  --primary-color: rgb(53, 53, 53);
+  --secondary-color: rgb(85, 85, 85);
+  --font-primary: 'Poppins', sans-serif;
 }
+
+body {
+  font-family: var(--font-primary);
+}
+
+/* body {
+  font-family: "Poppins", sans-serif;
+} */
 
 html {
   scroll-behavior: smooth;
@@ -24,6 +34,10 @@ p {
 a,
 .btn {
   transition: all 300ms ease;
+}
+
+.btn:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 /* DESKTOP NAV */
